fix: update scrollbar

--- a/src/styles.less
+++ b/src/styles.less
@@ -150,41 +150,36 @@
 // 滚动条样式优化
 ::-webkit-scrollbar,
 body::-webkit-scrollbar {
-    width: 14px;
+    width: 6px;
 }
 
-::-webkit-scrollbar,
-body::-webkit-scrollbar {
-    width: 14px;
+// ::-webkit-scrollbar-thumb,
+// body::-webkit-scrollbar-thumb {
+//     background-color: #434343;
+//     border-radius: 6px;
+//     border: 2px solid #262626;
+// }
+
+::-webkit-scrollbar-thumb {
+    background: #D6DBE3;
+    border-radius: 11px;
 }
 
-::-webkit-scrollbar-thumb,
-body::-webkit-scrollbar-thumb {
-    background-color: #434343;
-    border-radius: 6px;
-    border: 2px solid #262626;
-}
+// ::-webkit-scrollbar-track,
+// body::-webkit-scrollbar-track {
+//     background: #262626;
+// }
 
-::-webkit-scrollbar-thumb,
-body::-webkit-scrollbar-thumb {
-    background-color: #434343;
-    border-radius: 6px;
-    border: 2px solid #262626;
-}
-
-::-webkit-scrollbar-track,
-body::-webkit-scrollbar-track {
-    background: #262626;
-}
-
-::-webkit-scrollbar-track,
-body::-webkit-scrollbar-track {
-    background: #262626;
+::-webkit-scrollbar-track {
+    background: white;
 }
 
 .ant-drawer-body::-webkit-scrollbar {
     display: none;
 }
+
+
+
 
 // 转场动画
 
